--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "8.3.1",
+    "@angular/cli": "^8.3.1",
     "@angular/compiler-cli": "8.2.4",
     "@ngtools/webpack": "8.3.1",
+    "@openapitools/openapi-generator-cli": "0.0.14-4.0.2",
     "@types/jest": "24.0.18",
     "@types/node": "10.12.27",
     "@typescript-eslint/eslint-plugin": "2.0.0",
@@ -85,7 +86,6 @@
     "ts-loader": "6.0.4",
     "tslint": "5.19.0",
     "typescript": "3.4.5",
-    "@openapitools/openapi-generator-cli": "0.0.14-4.0.2",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.7",
     "webpack-dev-server": "3.8.0",
